--- a/style.css
+++ b/style.css
@@ -8,31 +8,48 @@
 }
 
 :root {
-    --title: #fffcf9;
-    --subtitle: #b3b3b3;
-    --bg-button: #e9e6e3;
-    --background: linear-gradient(43deg, #102d71 0%, #000000 52%, #c12a23 100%);
+    --title: #FFFCF9;
+    --bg-button: #E9E6E3;
+    --background: linear-gradient(67.08deg, #1E46A3 0%, #000000 48.94%, #C12A23 99.97%);
 }
 
-body,
+/* body,
 header,
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
+} */
+
+body {
+    background: var(--background);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+body, main {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
 .rocketflix-container {
-    background: var(--background);
-    background-repeat: no-repeat;
-    background-size: contain;
-    min-height: 100vh;
+    /* overflow-x: hidden; */
     width: 100%;
 }
 
 .rocketflix-header {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     margin: 20px;
+}
+
+.rocketflix-header img {
+    height: 62px;
+    width: 88px;
 }
 
 .rocketflix-container .rocketflix-title {
@@ -52,6 +69,7 @@ main {
 
 .rocketflix-content {
     display: flex;
+    gap: 20px;
     justify-content: center;
     margin-bottom: 30px;
     width: 630px;
@@ -63,9 +81,9 @@ main {
 }
 
 .rocketflix-content-title-overview {
-    align-items: center;
     display: flex;
-    margin-left: 34px;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .rocketflix-content-title-overview h2 {
@@ -108,3 +126,38 @@ main {
     font-weight: 700;
     margin-left: 17px;
 }
+
+@media (max-width: 600px) {
+    body {
+        min-height: 100vh;
+    }
+    
+    .rocketflix-content {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 20px;
+        width: auto;
+    }
+
+    .rocketflix-content-title-overview h2,  .rocketflix-content-title-overview p{
+        display: flex;
+        justify-content: center;
+    }
+
+    .rocketflix-content-title-overview p{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .rocketflix-container .rocketflix-text {
+        font-size: 12px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    .rocketflix-container {
+        height: 100vh;
+    }
+    
+  }
